--- a/CHALLENGE_BACKEND/appsettings.json
+++ b/CHALLENGE_BACKEND/appsettings.json
@@ -10,7 +10,7 @@
   },
   "AllowedHosts": "*",
   "Jwt": {
-    "Secretkey": "CrosfFFm7Qrkc#sF4ddf",
+    "Secretkey": "CrosfFFm7Qrkc#sF4ddfperro",
     "Issuer": "midominio.com",
     "Audience": "midominio.com"
   }
